    and supports recent versions of Z3 (e.g., 4.3). The new proof method is
    called "smt2", and the new Z3 is called "z3_new" in Sledgehammer and
    elsewhere.

* Sledgehammer:
  - New prover "z3_new" with support for Isar proofs
  - MaSh overhaul:
      - A new SML-based learning engine eliminates the dependency on Python
        and increases performance and reliability. See the Sledgehammer
        documentation for details.
  - New option:
      smt_proofs
  - Renamed options:
      isar_compress ~> compress_isar
      isar_try0 ~> try0_isar
    INCOMPATIBILITY.

* Metis:
  - Removed legacy proof method 'metisFT'. Use 'metis (full_types)' instead.
    INCOMPATIBILITY.

* Try0: Added 'algebra' and 'meson' to the set of proof methods.

* Command renaming: enriched_type ~> functor. INCOMPATIBILITY.

* The symbol "\<newline>" may be used within char or string literals
to represent (Char Nibble0 NibbleA), i.e. ASCII newline.

* Activation of Z3 now works via "z3_non_commercial" system option
(without requiring restart), instead of former settings variable
"Z3_NON_COMMERCIAL".  The option can be edited in Isabelle/jEdit menu
Plugin Options / Isabelle / General.

* "declare [[code abort: ...]]" replaces "code_abort ...".
INCOMPATIBILITY.

* "declare [[code drop: ...]]" drops all code equations associated
with the given constants.

* Abolished slightly odd global lattice interpretation for min/max.

Fact consolidations:
    min_max.inf_assoc ~> min.assoc
    min_max.inf_commute ~> min.commute
    min_max.inf_left_commute ~> min.left_commute
    min_max.inf_idem ~> min.idem
    min_max.inf_left_idem ~> min.left_idem
    min_max.inf_right_idem ~> min.right_idem
    min_max.sup_assoc ~> max.assoc
    min_max.sup_commute ~> max.commute
    min_max.sup_left_commute ~> max.left_commute
    min_max.sup_idem ~> max.idem
    min_max.sup_left_idem ~> max.left_idem
    min_max.sup_inf_distrib1 ~> max_min_distrib2
    min_max.sup_inf_distrib2 ~> max_min_distrib1